--- a/circle.css
+++ b/circle.css
@@ -21,6 +21,10 @@
   box-shadow: inner 0 0 20px 0 #fff;
 }
 
+.text {
+  display: none;
+}
+
 .circle-gradient {
   background: conic-gradient(
     #ffffff,
@@ -50,6 +54,7 @@
 }
 
 .dot-container {
+  visibility: hidden;
   position: absolute;
   top: -40px;
   left: 140px;
