--- a/player.css
+++ b/player.css
@@ -1,9 +1,25 @@
 .music-container {
+    visibility: hidden;
     background-color: #151423;
     border-radius: 18px;
     box-shadow: 0 0 10px 0px #9eabc9;
     margin-bottom: 50px;
+}
+    /* animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
   }
+  
+  @keyframes fadeInOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  } */
+  
   
   .navigation {
     display: flex;
