--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: url(./img/meditation2.jpg) no-repeat center center/cover;
+  background: url(./img/meditation.jpg) no-repeat center center/cover;
   min-height: 100vh;
   overflow: hidden;
   display: flex;
