--- a/circle.css
+++ b/circle.css
@@ -60,6 +60,10 @@
   left: 140px;
   width: 20px;
   height: 190px;
+  
+}
+
+.dot-container-animated {
   animation: rotate 7.5s linear forwards infinite;
   transform-origin: bottom center;
 }
