--- a/circle/circle.css
+++ b/circle/circle.css
@@ -78,6 +78,7 @@
 .dot-container.circling {
   animation: rotate 7.5s linear forwards infinite;
   transform-origin: bottom center;
+  animation-play-state: paused;
 }
 
 @keyframes rotate {
@@ -89,9 +90,11 @@
     transform: rotate(360deg);
   }
 }
-
+  
 .container.grow {
     animation: grow 3s linear forwards;
+    animation-play-state: running;
+
 }
 
 @keyframes grow {
@@ -106,6 +109,8 @@
 
 .container.shrink {
     animation: shrink 3s linear forwards;
+    animation-play-state: running;
+
 }
 
 @keyframes shrink {
