--- a/player/player.css
+++ b/player/player.css
@@ -6,8 +6,9 @@
   margin-bottom: 50px;
 }
 
-.music-container.animated {
-  animation: fadeIn ease 5s;;
+.initialized .music-container {
+  visibility: visible;
+  animation: fadeIn ease 5s;
 }
 
 @keyframes fadeIn {
