--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body::after {
 }
 
 h1 {
-  margin-top: 50px;
+  margin-top: 5%;
   font-family: Lato, sans-serif;
   font-size: 50px;
   font-weight: lighter;
@@ -55,3 +55,8 @@ p {
   font-weight: 100;
 }
 
+@media only screen and (max-width: 500px) {
+  h1 {
+    margin-top: 20%;
+  }
+}
