--- a/player/player.css
+++ b/player/player.css
@@ -34,6 +34,13 @@
   cursor: pointer;
   padding: 10px;
   margin: 0 10px;
+  transition: opacity 1s;
+}
+
+
+.action-btn[disabled] {
+  opacity: 0.2;
+
 }
 
 .action-btn.action-btn-big {
