changed name of picture

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: url(./img/meditation.jpg);
+  background: url(./img/mountainsandsky.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
