--- a/style.css
+++ b/style.css
@@ -61,6 +61,14 @@ p {
 }
 
 @media only screen and (max-width: 500px) {
+  body {
+    background: url(./img/mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+  
+  }
   h1 {
     margin-top: 20%;
   }
